DEMO_PHASE/IngressFIles/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-gateway-ingress
spec:
  rules:
    - host: maingateway.innoura.com
      http:
        paths:
          - path: /four
            pathType: Prefix
            backend:
              service:
                name: app-four-service
                port:
                  number: 80
